Updated 2017-04-29-bitbucket-pipelines.md